tests/fsharp/typecheck/sigs/neg66.bsl

neg66.fsx(43,4,43,5): parse error FS0010: Unexpected symbol ')' in definition. Expected incomplete structured construct at or before this point or other token.
